Wed Apr 30 15:32:43 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* s-rpc.adb: Enclose two potentially blocking operations with
	  pragma Warnings to avoid warning.

	* s-rpcpoo.ads: New routine Allocate_Task to enforce the pool
	  abstraction.

	* s-rpc.adb: Splitted System.RPC into 3 packages (System.RPC,
	  System.RPC.Pool and System.RPC.Util). Do not use Anonymous_Task
	  directly.

Wed Apr 23 11:36:04 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* Makefile.am (install-data-local): Make installed source read-only
	to anticipate gnatmake changes (right fix in the right place).

Tue Apr 22 17:44:25 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* Makefile.in (install-data-local): Make installed sources
	  read-only to anticipate gnatmake changes.

Mon Apr  7 12:46:42 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* Makefile.zip: The previous one was totally uncompatible with
	  VPATH handling.

	* Makefile.am: Do not destroy the target directory before building
	  the objects.

	* constants.sh: Output aligned constants & use hexa instead of
	  decimal.

Wed Mar 26 23:07:31 1997  Laurent Pautet  <pautet@esmeralda.enst.fr>

	* Makefile.am, Makefile.in: Add s-garrep and s-gartra in
 	COMMON_OBJECTS and COMMON_SOURCES. Rebuild source
 	dependencies. Tag to_be_released.

	* zlib: Add zlib dir and tag to_be_released. Warning: Need for
	a target 'distclean' and 'clean' in zlib Makefile and also a call
	to this target in Garlic Makefile.

Mon Mar 24 15:44:31 1997  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-gartcp.adb: Modified Open_Code, Data_Code and Quit_Code to be
	indianess independant.

Fri Mar 21 11:37:44 1997  Samuel Tardieu  <sam@zaphod.enst.fr>

	* Makefile.am: Updated for automake 1.1m.

Mon Mar 17 15:30:14 1997  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-stratt.adb: Incorrect check for W_*F. U was not always equal
 	to 0 because the first byte has a special treatment.

Wed Mar 12 13:53:10 1997  Laurent Pautet  <pautet@scapin.enst.fr>
