@@ -7,6 +7,7 @@ export TCP=
 export TERMINATION=
 export PARTITION=
 export RPC=
+export RPCPOO=
 export HEART=
 export GARREP=
 export GARTRA=
